Fix repository toggle jump when loading

--- a/app/styles/app/modules/loading-indicator.scss
+++ b/app/styles/app/modules/loading-indicator.scss
@@ -62,3 +62,10 @@
     margin-bottom: 0.5em;
   }
 }
+
+.repo-loading {
+  .loading-indicator {
+    width: 70px;
+    padding-left: 25px;
+  }
+}
